logic/src/parse/snapshots/logic__parse__ui__invalid_brackets2.snap
---
source: logic/src/parse/ui.rs
assertion_line: 45
expression: "ui_test(\"f(x + a * z (( zz\".to_string())"

---
error: Mismatching brackets!
  ┌─ file:1:14
  │
1 │ f(x + a * z (( zz
  │              ^ This bracket is opened, but it is never closed


